--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -9,13 +9,13 @@
 
 <div class="rooms">
   <div class="room">
-    <div class="room_name">
-      <a href="#">ルーム１</a> 
-    </div>  
+    <div class="room-name">
+      <a href="#">techroom1</a>
+    </div>
   </div>
   <div class="room">
-    <div class="room_name">
-      <a href="#">ルーム2</a> 
-    </div>  
+    <div class="room-name">
+      <a href="#">techroom2</a>
+    </div>
   </div>
 </div>
